<resources>
    <string name="app_name">Stramen</string>

    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="username">Логин</string>
    <string name="join">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="cancel">Отмена</string>
    <string name="ok">OK</string>
    <string name="error">Ошибка</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="enter">Вход</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="accept">Принять</string>
    <string name="back">Назад</string>
    <string name="register">Зарегистрироваться</string>
    <string name="empty_field">Пустое поле</string>
    <string name="internet_connection_error">Отсутствует интернет соединение</string>

    <!--PASSWORD RESTORATION-->
    <string name="forgot_my_password"><u>Я забыл пароль, помогите</u></string>
    <string name="password_restore_dialog_title">Введите вашу почту ниже</string>
    <string name="good_luck_to_restore">Удачи с восстановлением пароля!</string>
    <string name="email_is_sent">Письмо с восстановлением отправлено на почту</string>
    <string name="empty_email_field">Пустое поле почты!</string>
    <string name="wrong_email_field">Неверная почта</string>

    <!--LOGIN-->
    <string name="wrong_login_data">Ошибка. Проверьте правильность ввода почты и пароля</string>

    <!--REGISTRATION-->
    <string name="repeat_password">Повторите пароль</string>
    <string name="passwords_match_error">Пароли не совпадают!</string>
    <string name="confirm_password">Подтвердите почту для активации аккаунта</string>
    <string name="mythical_error_happened">Произошла мистическая ошибка! Попробуйте изменить поля</string>

    <!--PROJECTS-->
    <string name="create_new_project">Создать новый проект</string>
    <string name="find_new_project">Найти проект</string>
    
    <!--INTRO-->
    <string name="chat_title">Мгновенные чаты</string>
    <string name="chat_advantages">Мы предоставляем надежный, быстрый и функциональный
        инструмент общения. Используйте его для коммуникации в своей компании</string>
    <string name="task_title">Распределенные задачи</string>
    <string name="task_advantages">Делегируйте и дробите задачи. Используйте
    различные методологии для повышения эффективности</string>
    <string name="business_title">Экономьте время</string>
    <string name="business_advantages">Каждая сэкономленная секунда конвертируется
    в деньги. Мы помогаем вам приумножать ваш капитал</string>

</resources>
